Enable doc tests

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -4,6 +4,7 @@ target = "wasm32-unknown-unknown"
 
 [unstable]
 build-std = ["panic_abort", "std"]
+doctest-xcompile = true
 
 [target.wasm32-unknown-unknown]
 runner = "wasm-bindgen-test-runner"
