Remove unnecessary `mutable-globals` feature

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,5 @@
 [build]
-rustdocflags = ["-Ctarget-feature=+atomics,+bulk-memory,+mutable-globals"]
+rustdocflags = ["-Ctarget-feature=+atomics,+bulk-memory"]
 target = "wasm32-unknown-unknown"
 
 [unstable]
@@ -8,7 +8,7 @@ doctest-xcompile = true
 
 [target.wasm32-unknown-unknown]
 runner = "wasm-bindgen-test-runner"
-rustflags = ["-Ctarget-feature=+atomics,+bulk-memory,+mutable-globals"]
+rustflags = ["-Ctarget-feature=+atomics,+bulk-memory"]
 
 [target.'cfg(all())']
 rustflags = [
