--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -33,7 +33,7 @@ jobs:
         run: rustup toolchain install nightly --profile minimal
       - name: Run Rustdoc
         env:
-          RUSTDOCFLAGS: --crate-version main --cfg=web_sys_unstable_apis --cfg=docsrs -Ctarget-feature=+atomics,+bulk-memory
+          RUSTDOCFLAGS: --crate-version main --cfg=docsrs -Ctarget-feature=+atomics,+bulk-memory --cfg=web_sys_unstable_apis
           RUSTFLAGS: --cfg=web_sys_unstable_apis
         run: cargo doc --all-features --no-deps -Z rustdoc-map -Z rustdoc-scrape-examples
       - name: Setup Pages
