--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -3,6 +3,7 @@ name: Documentation
 on:
   push:
     branches: ["main"]
+  workflow_dispatch:
 
 permissions:
   contents: read
@@ -37,7 +38,7 @@ jobs:
           RUSTFLAGS: --cfg=web_sys_unstable_apis
         run: cargo doc --all-features --no-deps -Z rustdoc-map -Z rustdoc-scrape-examples
       - name: Setup Pages
-        uses: actions/configure-pages@v3
+        uses: actions/configure-pages@v4
       - name: Fix permissions
         run: |
           chmod -c -R +rX "target/wasm32-unknown-unknown/doc" | while read line; do
@@ -49,4 +50,4 @@ jobs:
           path: target/wasm32-unknown-unknown/doc
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v3
