--- a/.github/workflows/spellcheck.yml
+++ b/.github/workflows/spellcheck.yml
@@ -6,8 +6,11 @@ on:
   pull_request:
 
 concurrency:
-  group: ${{ github.head_ref || github.run_id }}
+  group: ${{ github.workflow }}-${{ github.ref_name }}
   cancel-in-progress: true
+
+env:
+  CARGO_TERM_COLOR: always
 
 jobs:
   spellcheck:
@@ -18,7 +21,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - uses: taiki-e/install-action@v2
+      - name: Install `cargo-spellcheck`
+        uses: taiki-e/install-action@v2
         with:
           tool: cargo-spellcheck
       - name: Run Spellcheck
@@ -34,7 +38,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - uses: taiki-e/install-action@v2
+      - name: Install Typos
+        uses: taiki-e/install-action@v2
         with:
           tool: typos-cli
       - name: Run Typos
