--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,6 +76,7 @@ wasm-bindgen-test = "0.3.39"
 web-sys = { version = "0.3", features = [
 	"AudioDataCopyToOptions",
 	"console",
+	"Response",
 	"RtcDataChannelState",
 ] }
 
