--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -18,7 +18,7 @@ jobs:
 
     environment:
       name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}wasm_worker
+      url: ${{ steps.deployment.outputs.page_url }}web_thread
 
     runs-on: ubuntu-latest
 
