--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ pollster = { version = "0.3", features = ["macro"] }
 [target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dev-dependencies]
 console_error_panic_hook = "0.1"
 wasm-bindgen-test = "0.3"
+web-sys = { version = "0.3.20", features = ["console"] }
 web-time = "1"
 
 [package.metadata.docs.rs]
