--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,10 @@ wasm-bindgen-test = "0.3"
 web-sys = { version = "0.3.20", features = ["console"] }
 web-time = "1"
 
+[[test]]
+name = "basic"
+test = false
+
 [package.metadata.docs.rs]
 rustdoc-args = ["--cfg=docsrs", "-Ctarget-feature=+atomics,+bulk-memory"]
 targets = ["wasm32-unknown-unknown"]
