--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -31,12 +31,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install Rust nightly
-        run: rustup toolchain install nightly --profile minimal
+        run: |
+          rustup toolchain install nightly --profile minimal --component rust-src --target wasm32-unknown-unknown
+          rustup default nightly
       - name: Run Rustdoc
         env:
           RUSTDOCFLAGS: --crate-version main --cfg=docsrs -Ctarget-feature=+atomics,+bulk-memory --cfg=web_sys_unstable_apis
           RUSTFLAGS: -Ctarget-feature=+atomics,+bulk-memory --cfg=web_sys_unstable_apis
-        run: cargo doc --all-features --no-deps -Z rustdoc-map -Z rustdoc-scrape-examples -Z doctest-xcompile
+        run: cargo doc --target wasm32-unknown-unknown --no-deps -Zbuild-std=panic_abort,std -Z rustdoc-map -Z rustdoc-scrape-examples -Z doctest-xcompile
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Fix permissions
