--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -23,6 +23,7 @@ jobs:
       matrix:
         target:
           - x86_64-unknown-linux-gnu
+          - wasm32-unknown-unknown
         rust:
           - { version: stable }
         include:
@@ -39,7 +40,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install Rust
-        run: rustup toolchain install ${{ matrix.rust.version }} --profile minimal --component clippy${{ matrix.rust.component }} --allow-downgrade --target ${{ matrix.target }}
+        run: |
+          rustup toolchain install ${{ matrix.rust.version }} --profile minimal --component clippy${{ matrix.rust.component }} --allow-downgrade --target ${{ matrix.target }}
+          rustup default ${{ matrix.rust.version }}
       - name: Run Clippy
         env:
           RUSTFLAGS: ${{ matrix.rust.flags }}
