--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,6 +27,9 @@ jobs:
           - ubuntu-latest
         target:
           - { target: x86_64-unknown-linux-gnu, web: false }
+          - { target: wasm32-unknown-unknown, web: true }
+        rust:
+          - { version: stable }
         include:
           - os: ubuntu-latest
             rust: {
@@ -50,10 +53,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Install `wasm-bindgen-cli`
-        uses: taiki-e/install-action@v2
+      - uses: taiki-e/cache-cargo-install-action@v1
         with:
           tool: wasm-bindgen-cli
+          git: https://github.com/daxpedda/wasm-bindgen
+          rev: f9093e6cb4211470648044b14183a57c639ea3cf
       - name: Install Rust
         run: |
           rustup toolchain install ${{ matrix.rust.version }} --profile minimal ${{ matrix.rust.component }} --target ${{ matrix.target.target }}
@@ -76,19 +80,19 @@ jobs:
         if: matrix.target.web == true && matrix.os == 'ubuntu-latest'
         env:
           CHROMEDRIVER: chromedriver
-          RUSTFLAGS: ${{ matrix.rust.flags }}
+          RUSTFLAGS: --cfg=unsupported_spawn_then_wait ${{ matrix.rust.flags }}
         run: cargo test --all-targets --no-fail-fast --target ${{ matrix.target.target }} ${{ matrix.rust.args }}
       - name: Test on Firefox
         if: matrix.target.web == true && matrix.os == 'ubuntu-latest'
         env:
           GECKODRIVER: geckodriver
-          RUSTFLAGS: ${{ matrix.rust.flags }}
+          RUSTFLAGS: --cfg=unsupported_service --cfg=unsupported_shared_wait ${{ matrix.rust.flags }}
         run: cargo test --all-targets --no-fail-fast --target ${{ matrix.target.target }} ${{ matrix.rust.args }}
       - name: Test on Safari
         if: matrix.target.web == true && matrix.os == 'macos-latest'
         env:
           SAFARIDRIVER: safaridriver
-          RUSTFLAGS: ${{ matrix.rust.flags }}
+          RUSTFLAGS: --cfg=unsupported_spawn_then_wait --cfg=unsupported_shared_wait ${{ matrix.rust.flags }}
         run: cargo test --all-targets --no-fail-fast --target ${{ matrix.target.target }} ${{ matrix.rust.args }}
       - name: Documentation Test
         if: matrix.target.web == false
@@ -112,6 +116,7 @@ jobs:
           - { version: stable }
         target:
           - x86_64-unknown-linux-gnu
+          - wasm32-unknown-unknown
         include:
           - rust: {
               version: nightly,
@@ -126,7 +131,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Install Rust
         run: |
-          rustup toolchain install ${{ matrix.rust.version }} --profile minimal ${{ matrix.rust.component }} --target ${{ matrix.target.target }}
+          rustup toolchain install ${{ matrix.rust.version }} --profile minimal ${{ matrix.rust.component }} --target ${{ matrix.target }}
           rustup default ${{ matrix.rust.version }}
       - name: Install Rust nightly
         run: rustup toolchain install nightly --profile minimal
@@ -135,4 +140,4 @@ jobs:
           RUSTFLAGS: ${{ matrix.rust.flags }}
         run: |
           cargo +nightly update -Z minimal-versions
-          cargo build --target ${{ matrix.target.target }} ${{ matrix.rust.args }}
+          cargo build --target ${{ matrix.target }} ${{ matrix.rust.args }}
