--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -112,7 +112,7 @@ jobs:
       fail-fast: false
       matrix:
         rust:
-          - { version: "1.60" }
+          - { version: "1.70" }
           - { version: stable }
         target:
           - x86_64-unknown-linux-gnu
@@ -135,9 +135,12 @@ jobs:
           rustup default ${{ matrix.rust.version }}
       - name: Install Rust nightly
         run: rustup toolchain install nightly --profile minimal
+      - name: Update to minimal versions
+        run: cargo +nightly update -Z minimal-versions
+      - name: Fix nightly
+        if: matrix.rust.version == 'nightly'
+        run: cargo update -p proc-macro2 --precise 1.0.60
       - name: Build
         env:
           RUSTFLAGS: ${{ matrix.rust.flags }}
-        run: |
-          cargo +nightly update -Z minimal-versions
-          cargo build --target ${{ matrix.target }} ${{ matrix.rust.args }}
+        run: cargo build --target ${{ matrix.target }} ${{ matrix.rust.args }}
