--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,9 @@ web-sys = { version = "0.3.65", features = [
 	"WorkerType",
 ] }
 
+[dev-dependencies]
+static_assertions = "1"
+
 [target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dev-dependencies]
 pollster = { version = "0.3", features = ["macro"] }
 
